# quicknote

./: .gitignore  README.md
backend/: .gitignore  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 00e5b5da1228_create_users_and_notes_tables.py  69943463bb7c_create_users_and_notes_tables.py
backend/app/: database.py  main.py
backend/app/api/: auth.py  notes.py  users.py
backend/app/core/: config.py  security.py
backend/app/models/: note.py  user.py
backend/app/schemas/: note.py  user.py
docs/: 01-project-overview.md  02-problem-statement.md  03-functional-requirements.md  04-use-cases.md  05-dfd.md  06-srs.md  prd.md
frontend/: .env.production  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  routes.tsx
frontend/src/api/: auth.ts  note.ts
frontend/src/components/: CreateNoteform.tsx  NoteCard.tsx  NoteList.tsx  ProtectedRoute.tsx  UserProfile.tsx
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/services/: authStorage.ts
frontend/src/styles/: auth.css  dashboard.css  loginpage.css  note.css  profile.css
