[project]
name = "quicknote"
version = "0.1.0"
description = "A full-stack note-taking application built with FastAPI, React, and PostgreSQL."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt==3.2.2",
    "email-validator>=2.3.0",
    "fastapi>=0.137.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
